--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,9 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form autocomplete="off" action="#" th:action="@{/registration}"
-                  th:object="${user}" method="post" class="form-horizontal"
-                  role="form">
+            <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${user}" method="post" class="form-horizontal" role="form">
                 <h2>Registration Form</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
@@ -55,18 +53,23 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="password" th:field="*{phone}"
+                        <input type="text" th:field="*{phone}"
                                placeholder="Phone number" class="form-control"/> <label
                             th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"
                             class="validation-message"></label>
                     </div>
                 </div>
-                <div class="form-group">
+
+                <div class="form-group blu-margin">
                     <div class="col-sm-9">
-                        <input type="password" th:field="*{company}"
-                               placeholder="Company" class="form-control"/> <label
-                            th:if="${#fields.hasErrors('company')}" th:errors="*{company}"
-                            class="validation-message"></label>
+                        <select class="form-control" th:field="*{company}" id="dropOperator">
+                            <option value="0">Select company:</option>
+                            <!--<option value="0" th:text="select company" ></option>-->
+                            <option th:each="company : ${companies}"
+                                    th:value="${company.id}"
+                                    th:text="${company.name}">
+                            </option>
+                        </select>
                     </div>
                 </div>
 
