--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 
 <div class="container">
     <!--<img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo"/>-->
-    <form th:action="@{/login}" method="POST" class="form-signin">
+    <form th:action="@{/login}" method="POST" class="form-signin" style="margin-top: 45px">
         <h3 class="form-signin-heading" th:text="Welcome"></h3>
         <br/>
 
