--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
     <script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js" defer></script>
 </head>
-<body>
-<div th:replace="~{fragments/header :: header}"></div>
-<div th:replace="~{fragments/footer :: footer}"></div>
+<div class="container">
+    <!--<div class="jumbotron">-->
+        <div th:replace="~{fragments/header :: header}"></div>
+        <div th:replace="~{fragments/footer :: footer}"></div>
+<!--</div>-->
+</div>
 </body>
 </html>
