--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,9 +4,7 @@
 <head>
     <title>Registration Form</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}"/>
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
-    <script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js" defer></script>
+    <th:block th:replace="~{fragments/bootstrap :: bootstrap}"></th:block>
 </head>
 <body>
 <form th:action="@{/}" method="get">
@@ -64,7 +62,6 @@
                     <div class="col-sm-9">
                         <select class="form-control" th:field="*{company}" id="dropOperator">
                             <option value="0">Select company:</option>
-                            <!--<option value="0" th:text="select company" ></option>-->
                             <option th:each="company : ${companies}"
                                     th:value="${company.id}"
                                     th:text="${company.name}">
