--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -18,6 +18,8 @@
                         <th>Name</th>
                         <th>Email</th>
                         <th>Address</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -25,6 +27,18 @@
                         <td th:text="${company.name}"></td>
                         <td th:text="${company.email}"></td>
                         <td th:text="${company.address}"></td>
+                        <td>
+                            <p data-placement="top" data-toggle="tooltip" title="Edit">
+                                <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
+                                        data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
+                            </p>
+                        </td>
+                        <td>
+                            <p data-placement="top" data-toggle="tooltip" title="Delete">
+                                <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
+                                        data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button>
+                            </p>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -33,54 +47,104 @@
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th class="col-md-1">First name</th>
                         <th class="col-md-1">Last name</th>
+                        <th class="col-md-1">First name</th>
                         <th>Email</th>
                         <th>Phone</th>
                         <!--<th>Company</th>-->
                         <th>Roles</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="user : ${users}">
-                        <td th:text="${user.name}"></td>
                         <td th:text="${user.lastname}"></td>
+                        <td th:text="${user.name}"></td>
                         <td th:text="${user.email}"></td>
                         <td th:text="${user.phone}"></td>
                         <!--<td th:text="${user.company}"></td>-->
-                        <td th:text="${user.roles}"></td>
+                        <td th:text="${#strings.setJoin(user.roles, ', ')}"></td>
+                        <td>
+                            <p data-placement="top" data-toggle="tooltip" title="Edit">
+                                <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
+                                        data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
+                            </p>
+                        </td>
+                        <td>
+                            <p data-placement="top" data-toggle="tooltip" title="Delete">
+                                <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
+                                        data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button>
+                            </p>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
             <div class="tab-pane fade" id="tabreports">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th class="col-md-1">Name</th>
-                        <th class="col-md-1">Date</th>
-                        <th class="col-md-4">Data</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="report : ${reports}">
-                        <td th:text="${report.name}"></td>
-                        <td th:text="${report.date}"></td>
-                        <td th:text="${report.data}"></td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Date</th>
+                            <th>Data</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="report : ${reports}">
+                            <td th:text="${report.name}"></td>
+                            <td th:text="${#temporals.format(report.date, 'yyyy-MM-dd HH:mm')}"></td>
+                            <!--<td th:text="${report.date}"></td>-->
+                            <td th:text="${report.data}"></td>
+                            <td>
+                                <p data-placement="top" data-toggle="tooltip" title="Edit">
+                                    <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
+                                            data-target="#edit"><span class="glyphicon glyphicon-pencil"></span>
+                                    </button>
+                                </p>
+                            </td>
+                            <td>
+                                <p data-placement="top" data-toggle="tooltip" title="Delete">
+                                    <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
+                                            data-target="#delete"><span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="clearfix"></div>
+                <ul class="pagination pull-right">
+                    <li class="disabled"><a href="#"><span class="glyphicon glyphicon-chevron-left"></span></a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
+                </ul>
+
             </div>
+
         </div>
     </div>
+</div>
 
-    <th:block th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
-        <p class="text-center" th:utext="${message}"></p>
-    </th:block>
+</div>
+</div>
+</div>
 
-    <th:block th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}">
-        <p class="text-center">Non admin message</p>
-    </th:block>
+<th:block th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+    <p class="text-center" th:utext="${message}"></p>
+</th:block>
+
+<th:block th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}">
+    <p class="text-center">Non admin message</p>
+</th:block>
 </div>
 
 </body>
