--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
 <div class="panel with-nav-tabs panel-default" th:fragment="content">
+
     <div class="panel-heading">
         <ul class="nav nav-tabs">
             <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies</a></li>
@@ -117,7 +118,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="clearfix"></div>
+
                 <ul class="pagination pull-right">
                     <li class="disabled"><a href="#"><span class="glyphicon glyphicon-chevron-left"></span></a></li>
                     <li class="active"><a href="#">1</a></li>
@@ -127,25 +128,75 @@
                     <li><a href="#">5</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
                 </ul>
-
             </div>
 
         </div>
     </div>
-</div>
 
-</div>
-</div>
-</div>
+    <!-- Modal -->
+    <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h2 class="modal-title" id="modalTitle">modalTitle</h2>
+                </div>
+                <div class="modal-body">
+                    <th:form class="form-horizontal" id="detailsForm">
+                        <input type="hidden" id="id" name="id">
 
-<th:block th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
-    <p class="text-center" th:utext="${message}"></p>
-</th:block>
+                        <div class="form-group">
+                            <label for="name" class="control-label col-xs-3">users.name</label>
 
-<th:block th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}">
-    <p class="text-center">Non admin message</p>
-</th:block>
+                            <div class="col-xs-9">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="users.name">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="control-label col-xs-3">users.email</label>
+
+                            <div class="col-xs-9">
+                                <input type="email" class="form-control" id="email" name="email"
+                                       placeholder="users.email">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" class="control-label col-xs-3">users.password</label>
+
+                            <div class="col-xs-9">
+                                <input type="password" class="form-control" id="password" name="password"
+                                       placeholder="users.password">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-xs-offset-3 col-xs-9">
+                                <button type="button" onclick="" class="btn btn-primary" data-placement="top"
+                                        data-toggle="tooltip" title="Save">
+                                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                </button>
+                                <button type="button" onclick="" class="btn btn-warning" data-placement="top"
+                                        data-toggle="tooltip" data-dismiss="modal" title="Cancel">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </th:form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <th:block th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+        <p class="text-center" th:utext="${message}"></p>
+    </th:block>
+
+    <th:block th:if="${#authorization.expression('!hasAuthority(''ADMIN'')')}">
+        <p class="text-center">Non admin message</p>
+    </th:block>
 </div>
-
 </body>
 </html>
