--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,7 +36,7 @@
 
             <ul class="dropdown-menu" role="menu">
                 <li><a href="#">New company</a></li>
-                <li><a href="#">New user</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#editUser">New user</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">Log out</a></li>
             </ul>
