--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -5,9 +5,12 @@
 
     <div class="panel-heading">
         <ul class="nav nav-tabs">
-            <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies <!--<span class="glyphicon glyphicon-home"></span>--></a></li>
-            <li><a href="#tabusers" data-toggle="tab">Users <!--<span class="glyphicon glyphicon-user"></span>--></a></li>
-            <li><a href="#tabreports" data-toggle="tab">Reports <!--<span class="glyphicon glyphicon-list-alt"></span>--></a></li>
+            <li class="active"><a href="#tabcompanies" data-toggle="tab">Companies
+                <!--<span class="glyphicon glyphicon-home"></span>--></a></li>
+            <li><a href="#tabusers" data-toggle="tab">Users <!--<span class="glyphicon glyphicon-user"></span>--></a>
+            </li>
+            <li><a href="#tabreports" data-toggle="tab">Reports
+                <!--<span class="glyphicon glyphicon-list-alt"></span>--></a></li>
         </ul>
     </div>
     <div class="panel-body">
@@ -152,42 +155,83 @@
                 </div>
                 <div class="modal-body">
                     <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${user}" method="post"
-                          class="form-horizontal" role="form" id="detailsForm">
-                        <!--<div class="form-horizontal" id="detailsForm">-->
-                        <input type="hidden" id="id" name="id">
+                          class="form-horizontal" role="form" data-toggle="validator" id="detailsForm">
 
-                        <div class="form-group">
+                        <input type="hidden" th:field="*{id}" name="id"/>
+
+                        <div class="form-group has-feedback">
                             <label for="fname" class="control-label col-xs-3">First name</label>
 
                             <div class="col-xs-9">
-                                <input type="text" class="form-control" id="fname" name="lname"
-                                       placeholder="first name">
+                                <input type="text" th:field="*{name}" placeholder="First name" id="fname"
+                                       class="form-control" data-minlength="3" required/>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="help-block">Minimum of 3 characters</div>
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group has-feedback">
                             <label for="lname" class="control-label col-xs-3">Last name</label>
 
                             <div class="col-xs-9">
-                                <input type="text" class="form-control" id="lname" name="lname" placeholder="last name">
+                                <input type="text" th:field="*{lastname}" placeholder="Last name" id="lname"
+                                       class="form-control" data-minlength="3" required/>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="help-block">Minimum of 3 characters</div>
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group has-feedback">
                             <label for="email" class="control-label col-xs-3">Email</label>
 
                             <div class="col-xs-9">
-                                <input type="email" class="form-control" id="email" name="email"
-                                       placeholder="Email">
+                                <input type="text" th:field="*{email}" placeholder="Email" id="email"
+                                       class="form-control" th:pattern="${emailpattern}"
+                                       data-error="***Please provide a valid Email" required/>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="help-block with-errors"></div>
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label for="password" class="control-label col-xs-3">Password</label>
+                        <div class="form-group has-feedback">
+                            <label for="inputPassword" class="control-label col-xs-3">Password</label>
 
                             <div class="col-xs-9">
-                                <input type="password" class="form-control" id="password" name="password"
-                                       placeholder="password">
+                                <input type="password" th:field="*{password}" id="inputPassword"
+                                       placeholder="Password"
+                                       class="form-control" data-minlength="5" maxlength="15"/>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="help-block">Password must have 5-15 characters</div>
+                            </div>
+
+                            <div class="col-xs-offset-3 col-xs-9">
+                                <input type="password" id="inputPasswordConfirm" placeholder="Confirm password"
+                                       class="form-control" data-match="#inputPassword" data-match-error="***Whoops, these don't match" required/>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
+
+                         <div class="form-group has-feedback">
+                            <label for="phone" class="control-label col-xs-3">Phone</label>
+
+                            <div class="col-xs-9">
+                                <input type="tel" th:field="*{phone}" placeholder="Phone: +1234567" id="phone" data-minlength="5"
+                                       class="form-control" th:pattern="${phonepattern}" required/>
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <div class="help-block">Format: + than 7-15 digits</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group blu-margin has-feedback">
+                            <div class="col-xs-offset-3 col-xs-9">
+                                <select class="form-control" th:field="*{company}" id="dropOperator" data-error="Select a company" required>
+                                    <option value="" selected="selected">Select company:</option>
+                                    <option th:each="company : ${companies}"
+                                            th:value="${company.id}"
+                                            th:text="${company.name}">
+                                    </option>
+                                </select>
+                                <span class='help-block with-errors'></span>
                             </div>
                         </div>
 
@@ -203,12 +247,11 @@
                                 </button>
                             </div>
                         </div>
-
-                        <span th:utext="${successMessage}"></span>
                     </form>
                 </div>
             </div>
         </div>
+        <script src="/js/validator.min.js"></script>
     </div>
 
 </div>
