--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -199,7 +199,7 @@
                             <div class="col-xs-9">
                                 <input type="password" th:field="*{password}" id="inputPassword"
                                        placeholder="Password"
-                                       class="form-control" data-minlength="5" maxlength="15"/>
+                                       class="form-control" data-minlength="5" maxlength="15" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 <div class="help-block">Password must have 5-15 characters</div>
                             </div>
