--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -48,14 +48,14 @@
                 </table>
             </div>
             <div class="tab-pane fade" id="tabusers">
-                <table class="table table-striped">
+                <table class="table table-hover">
                     <thead>
                     <tr>
                         <th class="col-md-1">Last name</th>
                         <th class="col-md-1">First name</th>
                         <th>Email</th>
                         <th>Phone</th>
-                        <!--<th>Company</th>-->
+                        <th>Company</th>
                         <th>Roles</th>
                         <th></th>
                         <th></th>
@@ -67,19 +67,25 @@
                         <td th:text="${user.name}"></td>
                         <td th:text="${user.email}"></td>
                         <td th:text="${user.phone}"></td>
-                        <!--<td th:text="${user.company}"></td>-->
+                        <td th:text="${user.company.name}"></td>
                         <td th:text="${#strings.setJoin(user.roles, ', ')}"></td>
                         <td>
-                            <p data-placement="top" data-toggle="tooltip" title="Edit">
-                                <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
-                                        data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
-                            </p>
+                            <form th:action="@{/users/{id}(id=${user.id})}" th:method="put">
+                                <p data-placement="top" data-toggle="tooltip" title="Edit">
+                                    <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
+                                            data-target="#edit"><span class="glyphicon glyphicon-pencil"></span>
+                                    </button>
+                                </p>
+                            </form>
                         </td>
                         <td>
-                            <p data-placement="top" data-toggle="tooltip" title="Delete">
-                                <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                        data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button>
-                            </p>
+                            <form th:action="@{/users/{id}(id=${user.id})}" th:method="delete">
+                                <p data-placement="top" data-toggle="tooltip" title="Delete">
+                                    <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
+                                            data-target="#delete"><span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </p>
+                            </form>
                         </td>
                     </tr>
                     </tbody>
@@ -101,7 +107,6 @@
                         <tr th:each="report : ${reports}">
                             <td th:text="${report.name}"></td>
                             <td th:text="${#temporals.format(report.date, 'yyyy-MM-dd HH:mm')}"></td>
-                            <!--<td th:text="${report.date}"></td>-->
                             <td th:text="${report.data}"></td>
                             <td>
                                 <p data-placement="top" data-toggle="tooltip" title="Edit">
@@ -206,16 +211,18 @@
 
                             <div class="col-xs-offset-3 col-xs-9">
                                 <input type="password" id="inputPasswordConfirm" placeholder="Confirm password"
-                                       class="form-control" data-match="#inputPassword" data-match-error="***Whoops, these don't match" required/>
+                                       class="form-control" data-match="#inputPassword"
+                                       data-match-error="***Whoops, these don't match" required/>
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
 
-                         <div class="form-group has-feedback">
+                        <div class="form-group has-feedback">
                             <label for="phone" class="control-label col-xs-3">Phone</label>
 
                             <div class="col-xs-9">
-                                <input type="tel" th:field="*{phone}" placeholder="Phone: +1234567" id="phone" data-minlength="5"
+                                <input type="tel" th:field="*{phone}" placeholder="Phone: +1234567" id="phone"
+                                       data-minlength="5"
                                        class="form-control" th:pattern="${phonepattern}" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 <div class="help-block">Format: + than 7-15 digits</div>
@@ -224,7 +231,8 @@
 
                         <div class="form-group blu-margin has-feedback">
                             <div class="col-xs-offset-3 col-xs-9">
-                                <select class="form-control" th:field="*{company}" id="dropOperator" data-error="Select a company" required>
+                                <select class="form-control" th:field="*{company}" id="dropOperator"
+                                        data-error="Select a company" required>
                                     <option value="" selected="selected">Select company:</option>
                                     <option th:each="company : ${companies}"
                                             th:value="${company.id}"
