--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -70,13 +70,13 @@
                         <td th:text="${user.company.name}"></td>
                         <td th:text="${#strings.setJoin(user.roles, ', ')}"></td>
                         <td>
-                            <form th:action="@{/users/{id}(id=${user.id})}" th:method="put">
+                            <!--<form th:action="@{/users/{id}(id=${user.id})}" th:method="put">-->
                                 <p data-placement="top" data-toggle="tooltip" title="Edit">
                                     <button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
-                                            data-target="#edit"><span class="glyphicon glyphicon-pencil"></span>
+                                            data-target="#editUser"><span class="glyphicon glyphicon-pencil"></span>
                                     </button>
                                 </p>
-                            </form>
+                            <!--</form>-->
                         </td>
                         <td>
                             <form th:action="@{/users/{id}(id=${user.id})}" th:method="delete">
@@ -161,14 +161,13 @@
                 <div class="modal-body">
                     <form autocomplete="off" action="#" th:action="@{/registration}" th:object="${user}" method="post"
                           class="form-horizontal" role="form" data-toggle="validator" id="detailsForm">
-
                         <input type="hidden" th:field="*{id}" name="id"/>
 
                         <div class="form-group has-feedback">
-                            <label for="fname" class="control-label col-xs-3">First name</label>
+                            <label for="name" class="control-label col-xs-3">First name</label>
 
                             <div class="col-xs-9">
-                                <input type="text" th:field="*{name}" placeholder="First name" id="fname"
+                                <input type="text" th:value = "${someVariable}" placeholder="First name" id="name" name="name"
                                        class="form-control" data-minlength="3" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 <div class="help-block">Minimum of 3 characters</div>
@@ -203,7 +202,7 @@
 
                             <div class="col-xs-9">
                                 <input type="password" th:field="*{password}" id="inputPassword"
-                                       placeholder="Password"
+                                       placeholder="Password" th:pattern="${passwdpattern}"
                                        class="form-control" data-minlength="5" maxlength="15" required/>
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 <div class="help-block">Password must have 5-15 characters</div>
