--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -299,7 +299,7 @@
                 var fname = currentRow.find("td:eq(0)").text(); // get current row 1st TD value
                 var lname = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
                 var email = currentRow.find("td:eq(2)").text(); // get current row 3rd TD
-                var data = fname + " " + lname + " (" + email + ")";
+                var data = "<br />" + fname + " " + lname + " (" + email + ")";
 
                 bootbox.dialog({
                     message: "Are you sure you want to delete user" + data + " ?",
