delete user alert added

--- a/src/main/resources/templates/fragments/content.html
+++ b/src/main/resources/templates/fragments/content.html
@@ -264,7 +264,7 @@
     </div>
 
     <!-- --------------------------------------------------------------------------------------- -->
-    <!-- ---------------------------          DELETE          ---------------------------------- -->
+    <!-- ---------------------------          DELETE WITH CONFIRM        ----------------------- -->
     <!-- --------------------------------------------------------------------------------------- -->
     <script type="application/javascript">
         $(document).ready(function () {
