delete user alert added

--- a/src/main/resources/templates/fragments/bootstrap.html
+++ b/src/main/resources/templates/fragments/bootstrap.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
     <script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js" defer></script>
+    <script type="text/javascript" src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+
+    <script src="/js/Example.js"></script>
+    <!--        http://bootboxjs.com/           -->
+    <!--    Bootstrap modals made easy          -->
     <script src="/js/bootbox.min.js" defer></script>
 </th:block>
 </head>
